--- a/_publications/2017_cikm.md
+++ b/_publications/2017_cikm.md
@@ -2,7 +2,7 @@
 title: "Crowdsourcing cybersecurity: Cyber attack detection using social media"
 collection: publications
 permalink: /publication/2017_cikm
-date 2017-11-06
+date: 2017-11-06
 venue: 'Conference on Information and Knowledge Management'
 paperurl: 'http://taoranj.github.io/files/cikm2017.pdf'
 ---
