--- a/_publications/2017_cikm.md
+++ b/_publications/2017_cikm.md
@@ -1,6 +1,7 @@
 ---
 title: "Crowdsourcing cybersecurity: Cyber attack detection using social media"
 collection: publications
+author: "abc, def"
 permalink: /publication/2017_cikm
 date: 2017-11-06
 venue: 'Conference on Information and Knowledge Management'
