--- a/_publications/2017_iaai.md
+++ b/_publications/2017_iaai.md
@@ -1,7 +1,7 @@
 ---
 title: "Determining relative airport threats from news and social media"
 collection: publications
-author: "Taoran Ji, Khandpur, Rupinder Paul, Yue Ning, Liang Zhao, Chang-Tien Lu, Erik R. Smith, Christopher Adams, and Naren Ramakrishnan."
+author: "Taoran Ji, Khandpur Rupinder Paul, Yue Ning, Liang Zhao, Chang-Tien Lu, Erik R. Smith, Christopher Adams, and Naren Ramakrishnan."
 permalink: /publication/2017_iaai
 date: 2017-02-08
 venue: 'Twenty-Ninth IAAI Conference'
