--- a/_publications/2017_cikm.md
+++ b/_publications/2017_cikm.md
@@ -1,14 +1,14 @@
 ---
 title: "Crowdsourcing cybersecurity: Cyber attack detection using social media"
 collection: publications
-author: "Khandpur, Rupinder Paul, Taoran Ji, Steve Jan, Gang Wang, Chang-Tien Lu, and Naren Ramakrishnan"
+author: "Khandpur Rupinder Paul, Taoran Ji, Steve Jan, Gang Wang, Chang-Tien Lu, and Naren Ramakrishnan"
 permalink: /publication/2017_cikm
 date: 2017-11-06
 venue: 'Conference on Information and Knowledge Management'
 paperurl: 'http://taoranj.github.io/files/cikm2017.pdf'
 ---
 
-Abstract-Social media is often viewed as a sensor into various societal events such as disease outbreaks, protests, and elections. We describe the use of social media as a crowdsourced sensor to gain insight into ongoing cyber-attacks. Our approach detects a broad range of cyber-attacks (eg, distributed denial of service (DDoS) attacks, data breaches, and account hijacking) in a weakly supervised manner using just a small set of seed event triggers and requires no training or labeled samples. A new query expansion strategy based on convolution kernels and dependency parses helps model semantic structure and aids in identifying key event characteristics. Through a large-scale analysis over Twitter, we demonstrate that our approach consistently identifies and encodes events, outperforming existing methods.
+Abstract-Social media is often viewed as a sensor into various societal events such as disease outbreaks, protests, and elections. We describe the use of social media as a crowdsourced sensor to gain insight into ongoing cyber-attacks. Our approach detects a broad range of cyber-attacks (e.g., distributed denial of service (DDoS) attacks, data breaches, and account hijacking) in a weakly supervised manner using just a small set of seed event triggers and requires no training or labeled samples. A new query expansion strategy based on convolution kernels and dependency parses helps model semantic structure and aids in identifying key event characteristics. Through a large-scale analysis over Twitter, we demonstrate that our approach consistently identifies and encodes events, outperforming existing methods.
 
 [Download paper here](http://taoranj.github.io/files/cikm2017.pdf)
 
